@@ -2657,6 +2657,15 @@ class Axes(martist.Artist):
 
         return self.patch.contains(mouseevent)
 
+    def contains_point(self, point):
+        """
+        Returns True if the point (tuple of x,y) is inside the axes
+        (the area defined by the its patch). A pixel coordinate is
+        required.
+
+        """
+        return self.patch.contains_point(point)
+
     def pick(self, *args):
         """
         call signature::
